src/objects/Connector__c.object
<CustomObject>
    <fields>
        <fullName>AccessTokenExpiry__c</fullName>
        <label>Access Token Expiry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccessTokenRequested__c</fullName>
        <label>Access Token Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessToken__c</fullName>
        <label>Access Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>NOT(ISBLANK(AccessToken__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConnectorType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Connector Type</label>
        <referenceTo>ConnectorType__c</referenceTo>
        <relationshipLabel>Connectors</relationshipLabel>
        <relationshipName>Connectors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RefreshTokenRequested__c</fullName>
        <label>Refresh Token Requested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RefreshToken__c</fullName>
        <label>Refresh Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TokenType__c</fullName>
        <label>Token Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Connector</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ConnectorType__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connector Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connectors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>